samples/_failures_safe/1761653429_c1869f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e46aa1bb.c: In function ‘main’:
./samples/SAFE/__tmp_e46aa1bb.c:150:33: error: missing terminating " character
  150 |             input_matrix(&mat1, "
      |                                 ^
./samples/SAFE/__tmp_e46aa1bb.c:150:13: error: expected expression at end of input
  150 |             input_matrix(&mat1, "
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_e46aa1bb.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e46aa1bb.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e46aa1bb.c:150:13: error: expected declaration or statement at end of input
